[project]
name = "fitness-diet-advisor-ai"
version = "0.1.0"
description = "AI-powered chatbot for fitness and diet advice"
authors = [
    {name = "AI Assistant",email = "assistant@example.com"}
]
readme = "README.md"
requires-python = ">=3.9.0, !=3.9.7, <4.0.0"
dependencies = [
    "google-adk (>=1.0.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

